service smr {
    rpc IndexPiece (IndexRequest) returns (IndexResponse);
    //rpc Search (SearchRequest) returns SearchResponse;
}

enum IndexType {
    UNKNOWN = 0; // forwards compatibility with enum version change
    NOTE = 1;
    MEASURE = 2;
}

message IndexRequest {
    required IndexType type = 1;
    required Piece piece = 2;
}

message Piece {
    required bytes symbolicData = 1;
    required string encoding = 2;
    required string name = 3;
    optional uint32 id = 4;
}

message IndexResponse {
    repeated Note notes = 1;
    repeated Measure measures = 2;
}

message Note {
    required float onset = 1;
    required float offset = 2;
    required int32 pitchB40 = 3;
    required uint32 pieceId = 4;
    required uint32 measureId = 5; 
}

message Measure {
    required bytes symbolicData = 1;
    required uint32 number = 2;
}